[tool.poetry]
name = "tutorpayout"
version = "0.1.0"
description = "Tutor Direct Deposit, Documentation, and Bank Transfer Software"
authors = ["Zachary Nawrocki <zacknawrocki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
stripe = "^7.9.0"
pandas = "^2.1.4"
python-dotenv = "^1.0.0"
mypy = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
